# beam-inspector

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: rust.yml
formatters/: example.json  example.yaml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css  store.ts  task.ts  types.ts
frontend/src/lib/: AppView.svelte  EventList.svelte  ModeToggle.svelte  Nav.svelte  NavButton.svelte  TaskView.svelte
src/: main.rs  serve.rs
