[package]
name = "beam-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
rust-embed = { version = "6.8", features = ["axum-ex", "mime-guess", "debug-embed"] }
hyper = { version = "0.14.27", features = ["client", "http1"] }
once_cell = "1.18.0"
