[package]
name = "beam-inspector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
rust-embed = { version = "6.8", features = ["axum-ex", "mime-guess", "debug-embed"] }
hyper = { version = "0.14.27", features = ["client", "http1"] }
once_cell = "1.18.0"
clap = { version = "4.3.10", features = ["derive", "env"] }
